@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020190212"
-#define public MagickPackageReleaseDate "snapshot-20190212"
+#define public MagickPackageVersionAddendum ".020190213"
+#define public MagickPackageReleaseDate "snapshot-20190213"
