@@ -1,3 +1,8 @@
+2019-02-13  Troy Patteson  <troyp@ieee.org>
+
+	* PerlMagick/Magick.xs (Mogrify): Remove reference to undefined
+	Annotate argument.
+
 2019-02-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/tiff.c (ReadTIFFImage): For planar TIFF, make sure that
